--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "author": "(Pongpanot Chuaysakun <muchrm.me@gmail.com>)",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "build": "cross-env NODE_ENV=production node build/build.js",
+    "clean": "rm -rf dist",
+    "dev": "cross-env NODE_ENV=development node build/dev-server.js",
+    "electron": "cross-env NODE_ELECTRON=true npm run build && electron electronIndex.js",
+    "gh": "npm run build && gh-pages -d dist",
+    "lint": "eslint --ext .js .vue client/*",
+    "lint:fix": "eslint --fix --ext .js .vue electron.js client/* build/* config/*",
+    "test": "echo lol"
   },
   "dependencies": {
     "animate.css": "^3.5.2",
@@ -21,72 +23,55 @@
     "vue": "^2.1.0",
     "vue-bulma-breadcrumb": "^1.0.0",
     "vue-bulma-expanding": "^0.0.0",
+    "vue-bulma-tabs": "^1.1.1",
     "vue-bulma-tooltip": "^1.0.0",
     "vue-router": "^2.1.1",
     "vuex": "^2.1.1",
     "vuex-router-sync": "^4.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-istanbul": "^3.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-register": "^6.0.0",
-    "chai": "^3.5.0",
-    "chalk": "^1.1.3",
-    "chromedriver": "^2.21.2",
-    "connect-history-api-fallback": "^1.1.0",
+    "autoprefixer": "^6.6.0",
+    "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-export-extensions": "^6.8.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-2": "^6.17.0",
+    "connect-history-api-fallback": "^1.3.0",
     "cross-env": "^3.1.3",
-    "cross-spawn": "^4.0.2",
-    "css-loader": "^0.25.0",
-    "eslint": "^3.7.1",
+    "css-loader": "^0.26.1",
+    "electron-devtools-installer": "^2.0.1",
+    "eslint": "^3.12.2",
     "eslint-config-standard": "^6.1.0",
-    "eslint-friendly-formatter": "^2.0.5",
-    "eslint-loader": "^1.5.0",
-    "eslint-plugin-html": "^1.3.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-html": "^1.7.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
-    "friendly-errors-webpack-plugin": "^1.1.2",
-    "function-bind": "^1.0.2",
-    "html-webpack-plugin": "^2.8.1",
-    "http-proxy-middleware": "^0.17.2",
-    "inject-loader": "^2.0.1",
-    "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.2.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sinon-chai": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
-    "lolex": "^1.4.0",
-    "mocha": "^3.1.0",
-    "nightwatch": "^0.9.8",
+    "html-webpack-plugin": "^2.25.0",
+    "http-proxy-middleware": "^0.17.3",
+    "imports-loader": "^0.7.0",
+    "node-sass": "^4.1.1",
     "opn": "^4.0.2",
-    "ora": "^0.3.0",
-    "phantomjs-prebuilt": "^2.1.3",
-    "selenium-server": "2.53.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.4",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
+    "ora": "^0.4.0",
+    "postcss-loader": "^1.2.1",
+    "progress-bar-webpack-plugin": "^1.9.1",
+    "sass-loader": "^4.1.1",
+    "serve-favicon": "^2.3.2",
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.4.0",
     "url-loader": "^0.5.7",
-    "vue-loader": "^10.0.0",
-    "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.1.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1"
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^10.0.2",
+    "vue-template-compiler": "2.1.8",
+    "webpack": "^2.1.0-beta.28",
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-hot-middleware": "^2.14.0",
+    "webpack-merge": "^2.0.0"
   },
   "engines": {
     "node": ">= 4.0.0",
