--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "bulma": "^0.3.0",
+    "chart.js": "^2.4.0",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.2.0",
     "sass-loader": "^4.1.1",
