--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-bulma-expanding": "^0.0.0",
     "vue-bulma-tabs": "^1.1.1",
     "vue-bulma-tooltip": "^1.0.0",
+    "vue-charts": "^0.2.1",
     "vue-router": "^2.1.1",
     "vuex": "^2.1.1",
     "vuex-router-sync": "^4.1.0"
