--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "animate.css": "^3.5.2",
+    "axios": "^0.15.3",
     "bulma": "^0.3.0",
+    "c3": "^0.4.11",
     "chart.js": "^2.4.0",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.2.0",
